--- a/locale/en/brush-tools.cfg
+++ b/locale/en/brush-tools.cfg
@@ -11,7 +11,21 @@ rectangle=Rectangle
 speech-bubble=text
 
 [shortcut-name]
-brush-tool-shortcut=Brush tool
+brush-bt-shortcut=Brush tool
+eraser-bt-shortcut=Eraser
+recolor-bt-shortcut=Recolor
+
+[controls]
+redo-bt=Redo
+give-paint-bt=Get a brush tool
+give-recolor-bt=Get a recolor tool
+give-eraser-bt=Get an eraser
+select-prev-brush-tool=Select previous brush tool
+select-next-brush-tool=Select next brush tool
+-size-bt=Decrease brush size
++size-bt=Increase brush size
+-10size-bt=Decrease brush size x10
++10size-bt=Increase brush size x10
 
 [brush-tools-commands]
 remove-paintings=- removes paintings on your surface
