--- a/locale/en/brush-tools.cfg
+++ b/locale/en/brush-tools.cfg
@@ -32,3 +32,4 @@ remove-paintings=- removes paintings on your surface
 remove-all-paintings=- removes all paintings
 count-paintings=- counts paintings on your surface
 count-all-paintings=- counts all paintings
+delete_UI=- deletes UI of "Brush tools" mod
