--- a/locale/en/brush-tools.cfg
+++ b/locale/en/brush-tools.cfg
@@ -2,16 +2,18 @@
 brush-tools=Brush tools [ALPHA]
 
 [mod-description]
-brush-tools=It's alpha version, some text are missing
+brush-tools=Adds brush tools etc\nIt's alpha version, some text are missing
 
 [item-name]
 pen=Pen
 circle=Circle
 rectangle=Rectangle
-speech-bubble=text
+speech-bubble=Text
+eraser=Eraser
+recolor-bt=Recolor
 
 [shortcut-name]
-brush-bt-shortcut=Brush tool
+brush-bt-shortcut=Brush tools
 eraser-bt-shortcut=Eraser
 recolor-bt-shortcut=Recolor
 
@@ -25,7 +27,7 @@ select-next-brush-tool=Select next brush tool
 -size-bt=Decrease brush size
 +size-bt=Increase brush size
 -10size-bt=Decrease brush size x10
-+10size-bt=Increase brush size x10
++19size-bt=Increase brush size x10
 
 [brush-tools-commands]
 remove-paintings=- removes paintings on your surface
