--- a/locale/en/brush-tools.cfg
+++ b/locale/en/brush-tools.cfg
@@ -2,7 +2,7 @@
 brush-tools=Brush tools [ALPHA]
 
 [mod-description]
-brush-tools=Adds brush tools etc\nIt's alpha version, some texts are missing
+brush-tools=Adds brush tools etc\nIt's alpha version, some features are not completed
 
 [item-name]
 pen=Pen
