--- a/locale/ru/brush-tools.cfg
+++ b/locale/ru/brush-tools.cfg
@@ -1,8 +1,8 @@
 [mod-name]
-brush-tools=Инструмент Кисть [ALPHA]
+brush-tools=Кисти [ALPHA]
 
 [mod-description]
-brush-tools=Добавляет набор инструментов кисть и т.д.\nПоскольку это альфа версия, некоторые тексты отсутствуют
+brush-tools=Добавляет набор кисти и т.д.\nПоскольку это альфа версия, некоторые фичи не завершены
 
 [item-name]
 pen=Ручка
@@ -10,16 +10,16 @@ circle=Круг
 rectangle=Прямоугольник
 speech-bubble=Текст
 eraser=Ластик
-recolor-bt=Перекраска
+recolor-bt=Перекрашиватель
 
 [shortcut-name]
-brush-bt-shortcut=Инструмент Кисть
+brush-bt-shortcut=Инструмент кисть
 eraser-bt-shortcut=Ластик
 recolor-bt-shortcut=Перекраска
 
 [controls]
-redo-bt=Повторить
-give-paint-bt=Получить инструмент кисти
+redo-bt=Вернуть
+give-paint-bt=Получить кисть
 give-recolor-bt=Получить инструмент перекрашивания
 give-eraser-bt=Получить ластик
 select-prev-brush-tool=Выбрать предыдущий инструмент кисти
@@ -30,10 +30,10 @@ select-next-brush-tool=Выбрать следующий инструмент к
 +19size-bt=Увеличить размер кисти x10
 
 [brush-tools-commands]
-remove-paintings=- удаляет покраски на вашей поверхности
-remove-all-paintings=- убирает все покраски
-count-paintings=- подсчитывает покраски на вашей поверхности
-count-all-paintings=- подсчитывает все покраски
-delete_UI=- удаляет интерфейс мода "Инструмент Кисть"
+remove-paintings=- удаляет рисунки на вашей поверхности
+remove-all-paintings=- убирает все рисунки
+count-paintings=- подсчитывает рисунки на вашей поверхности
+count-all-paintings=- подсчитывает все рисунки
+delete_UI=- удаляет интерфейс мода "Кисти"
 
 
