--- a/locale/ru/brush-tools.cfg
+++ b/locale/ru/brush-tools.cfg
@@ -22,12 +22,12 @@ redo-bt=Вернуть
 give-paint-bt=Получить кисть
 give-recolor-bt=Получить инструмент перекрашивания
 give-eraser-bt=Получить ластик
-select-prev-brush-tool=Выбрать предыдущий инструмент кисти
-select-next-brush-tool=Выбрать следующий инструмент кисти
+select-prev-brush-tool=Выбрать предыдущую кисть
+select-next-brush-tool=Выбрать следующую кисть
 -size-bt=Уменьшить размер кисти
-+size-bt=Уменьшить размер кисти
++size-bt=Увеличить размер кисти
 -10size-bt=Уменьшить размер кисти x10
-+19size-bt=Увеличить размер кисти x10
++10size-bt=Увеличить размер кисти x10
 
 [brush-tools-commands]
 remove-paintings=- удаляет рисунки на вашей поверхности
