--- a/locale/cs/brush-tools.cfg
+++ b/locale/cs/brush-tools.cfg
@@ -36,4 +36,4 @@ count-paintings=- počítá obrazy na vašem povrchu
 count-all-paintings=- počítá všechny obrazy
 delete_UI=- vymaže uživatelské rozhraní modu štětců
 
-
+[brush-tools]
