--- a/locale/en/brush-tools.cfg
+++ b/locale/en/brush-tools.cfg
@@ -35,3 +35,6 @@ remove-all-paintings=- removes all paintings
 count-paintings=- counts paintings on your surface
 count-all-paintings=- counts all paintings
 delete_UI=- deletes UI of "Brush tools" mod
+
+[brush-tools]
+respons.big-distance=You drew too big painting
