--- a/locale/ru/brush-tools.cfg
+++ b/locale/ru/brush-tools.cfg
@@ -36,4 +36,5 @@ count-paintings=- подсчитывает рисунки на вашей пов
 count-all-paintings=- подсчитывает все рисунки
 delete_UI=- удаляет интерфейс мода "Кисти"
 
-
+[brush-tools]
+respons.big-distance=Вы нарисовали слишком большой рисунок
