--- a/locale/en/brush-tools.cfg
+++ b/locale/en/brush-tools.cfg
@@ -27,7 +27,13 @@ select-next-brush-tool=Select next brush tool
 -size-bt=Decrease brush size
 +size-bt=Increase brush size
 -10size-bt=Decrease brush size x10
-+19size-bt=Increase brush size x10
++10size-bt=Increase brush size x10
+
+[mod-setting-name]
+brush-tools_dev-mode=Dev mode
+
+[mod-setting-description]
+brush-tools_dev-mode=Generetes code of fiqures in ...script-output/brush-tools-output.lua
 
 [brush-tools-commands]
 remove-paintings=- removes paintings on your surface
