--- a/locale/ru/brush-tools.cfg
+++ b/locale/ru/brush-tools.cfg
@@ -29,6 +29,12 @@ select-next-brush-tool=Выбрать следующую кисть
 -10size-bt=Уменьшить размер кисти x10
 +10size-bt=Увеличить размер кисти x10
 
+[mod-setting-name]
+brush-tools_dev-mode=Режим разработчика
+
+[mod-setting-description]
+brush-tools_dev-mode=Генерирует код фигур в ...script-output/brush-tools-output.lua
+
 [brush-tools-commands]
 remove-paintings=- удаляет рисунки на вашей поверхности
 remove-all-paintings=- убирает все рисунки
