Update translations from Crowdin

--- a/locale/cs/brush-tools.cfg
+++ b/locale/cs/brush-tools.cfg
@@ -2,7 +2,7 @@
 brush-tools=Nástroje štětce [ALPHA]
 
 [mod-description]
-brush-tools=Přidá štětcové nástroje atd. \nJe to alfa verze, některé texty chybí
+brush-tools=Přidává nástroje štětce atd.\nJe to alfa verze, některé funkce nejsou dokončeny
 
 [item-name]
 pen=Pero
@@ -27,7 +27,10 @@ select-next-brush-tool=Vybrat následující nástroj štětce
 -size-bt=Snižte velikost štětce
 +size-bt=Zvětšete velikost štětce
 -10size-bt=Snižte velikost štětce x10
-+19size-bt=Zvětšete velikost štětce x10
+
+[mod-setting-name]
+
+[mod-setting-description]
 
 [brush-tools-commands]
 remove-paintings=- odstraní malby na vašem povrchu
@@ -37,3 +40,6 @@ count-all-paintings=- počítá všechny obrazy
 delete_UI=- vymaže uživatelské rozhraní modu štětců
 
 [brush-tools]
+respons.big-distance=Nakreslil jsi příliš velký obraz
+
+
