--- a/locale/ru/brush-tools.cfg
+++ b/locale/ru/brush-tools.cfg
@@ -1,8 +1,7 @@
 [mod-name]
-brush-tools=Кисти [ALPHA]
+brush-tools=Инструмент Кисть [ALPHA]
 
 [mod-description]
-brush-tools=Добавляет набор кисти и т.д.\nПоскольку это альфа версия, некоторые фичи не завершены
 
 [item-name]
 pen=Ручка
@@ -10,37 +9,35 @@ circle=Круг
 rectangle=Прямоугольник
 speech-bubble=Текст
 eraser=Ластик
-recolor-bt=Перекрашиватель
+recolor-bt=Перекраска
 
 [shortcut-name]
-brush-bt-shortcut=Инструмент кисть
+brush-bt-shortcut=Инструмент Кисть
 eraser-bt-shortcut=Ластик
 recolor-bt-shortcut=Перекраска
 
 [controls]
-redo-bt=Вернуть
-give-paint-bt=Получить кисть
+redo-bt=Повторить
+give-paint-bt=Получить инструмент кисти
 give-recolor-bt=Получить инструмент перекрашивания
 give-eraser-bt=Получить ластик
-select-prev-brush-tool=Выбрать предыдущую кисть
-select-next-brush-tool=Выбрать следующую кисть
+select-prev-brush-tool=Выбрать предыдущий инструмент кисти
+select-next-brush-tool=Выбрать следующий инструмент кисти
 -size-bt=Уменьшить размер кисти
-+size-bt=Увеличить размер кисти
++size-bt=Уменьшить размер кисти
 -10size-bt=Уменьшить размер кисти x10
-+10size-bt=Увеличить размер кисти x10
 
 [mod-setting-name]
-brush-tools_dev-mode=Режим разработчика
 
 [mod-setting-description]
-brush-tools_dev-mode=Генерирует код фигур в ...script-output/brush-tools-output.lua
 
 [brush-tools-commands]
-remove-paintings=- удаляет рисунки на вашей поверхности
-remove-all-paintings=- убирает все рисунки
-count-paintings=- подсчитывает рисунки на вашей поверхности
-count-all-paintings=- подсчитывает все рисунки
-delete_UI=- удаляет интерфейс мода "Кисти"
+remove-paintings=- удаляет покраски на вашей поверхности
+remove-all-paintings=- убирает все покраски
+count-paintings=- подсчитывает покраски на вашей поверхности
+count-all-paintings=- подсчитывает все покраски
+delete_UI=- удаляет интерфейс мода "Инструмент Кисть"
 
 [brush-tools]
-respons.big-distance=Вы нарисовали слишком большой рисунок
+
+
