--- a/locale/ru/brush-tools.cfg
+++ b/locale/ru/brush-tools.cfg
@@ -1,7 +1,8 @@
 [mod-name]
-brush-tools=Инструмент Кисть [ALPHA]
+brush-tools=Кисти [ALPHA]
 
 [mod-description]
+brush-tools=Добавляет набор кисти и т.д.\nПоскольку это альфа версия, некоторые фичи не завершены
 
 [item-name]
 pen=Ручка
@@ -9,35 +10,37 @@ circle=Круг
 rectangle=Прямоугольник
 speech-bubble=Текст
 eraser=Ластик
-recolor-bt=Перекраска
+recolor-bt=Перекрашиватель
 
 [shortcut-name]
-brush-bt-shortcut=Инструмент Кисть
+brush-bt-shortcut=Инструмент кисть
 eraser-bt-shortcut=Ластик
 recolor-bt-shortcut=Перекраска
 
 [controls]
-redo-bt=Повторить
-give-paint-bt=Получить инструмент кисти
+redo-bt=Вернуть
+give-paint-bt=Получить кисть
 give-recolor-bt=Получить инструмент перекрашивания
 give-eraser-bt=Получить ластик
-select-prev-brush-tool=Выбрать предыдущий инструмент кисти
-select-next-brush-tool=Выбрать следующий инструмент кисти
+select-prev-brush-tool=Выбрать предыдущую кисть
+select-next-brush-tool=Выбрать следующую кисть
 -size-bt=Уменьшить размер кисти
-+size-bt=Уменьшить размер кисти
++size-bt=Увеличить размер кисти
 -10size-bt=Уменьшить размер кисти x10
++10size-bt=Увеличить размер кисти x10
 
 [mod-setting-name]
+brush-tools_dev-mode=Режим разработчика
 
 [mod-setting-description]
+brush-tools_dev-mode=Генерирует код фигур в ...script-output/brush-tools-output.lua
 
 [brush-tools-commands]
-remove-paintings=- удаляет покраски на вашей поверхности
-remove-all-paintings=- убирает все покраски
-count-paintings=- подсчитывает покраски на вашей поверхности
-count-all-paintings=- подсчитывает все покраски
-delete_UI=- удаляет интерфейс мода "Инструмент Кисть"
+remove-paintings=- удаляет рисунки на вашей поверхности
+remove-all-paintings=- убирает все рисунки
+count-paintings=- подсчитывает рисунки на вашей поверхности
+count-all-paintings=- подсчитывает все рисунки
+delete_UI=- удаляет интерфейс мода "Кисти"
 
 [brush-tools]
-
-
+respons.big-distance=Вы нарисовали слишком большой рисунок
