--- a/locale/cs/brush-tools.cfg
+++ b/locale/cs/brush-tools.cfg
@@ -27,6 +27,7 @@ select-next-brush-tool=Vybrat následující nástroj štětce
 -size-bt=Snižte velikost štětce
 +size-bt=Zvětšete velikost štětce
 -10size-bt=Snižte velikost štětce x10
++10size-bt=Zvětšete velikost štětce x10
 
 [mod-setting-name]
 
