--- a/locale/de/brush-tools.cfg
+++ b/locale/de/brush-tools.cfg
@@ -27,6 +27,7 @@ select-next-brush-tool=Nächstes Pinselwerkzeug auswählen
 -size-bt=Pinselgröße verkleinern
 +size-bt=Pinselgröße vergrößern
 -10size-bt=Pinselgröße verkleinern x10
++10size-bt=Pinselgröße vergrößern x10
 
 [mod-setting-name]
 
