Update translations from Crowdin

--- a/locale/cs/brush-tools.cfg
+++ b/locale/cs/brush-tools.cfg
@@ -27,9 +27,10 @@ select-next-brush-tool=Vybrat následující nástroj štětce
 -size-bt=Snižte velikost štětce
 +size-bt=Zvětšete velikost štětce
 -10size-bt=Snižte velikost štětce x10
-+10size-bt=Zvětšete velikost štětce x10
++10size-bt=Zvětšit velikost štětce x10
 
 [mod-setting-name]
+brush-tools_dev-mode=Režim vývojáře
 
 [mod-setting-description]
 
