--- a/locale/de/brush-tools.cfg
+++ b/locale/de/brush-tools.cfg
@@ -30,11 +30,19 @@ select-next-brush-tool=Nächstes Pinselwerkzeug auswählen
 +10size-bt=Pinselgröße vergrößern x10
 
 [mod-setting-name]
+brush-tools_dev-mode=Entwicklermodus
 
 [mod-setting-description]
+brush-tools_dev-mode=Generiert Zahlencode in ...script-output/brush-tools-output.lua
 
 [brush-tools-commands]
+remove-paintings=- entfernt Bilder auf deiner Oberfläche
+remove-all-paintings=- entfernt alle Bilder
+count-paintings=- zählt Bilder auf deiner Oberfläche
+count-all-paintings=- zählt alle Bilder
+delete_UI=- löscht die Benutzeroberfläche des "Pinselwerkzeuge"-Mods
 
 [brush-tools]
+respons.big-distance=Du hast ein zu großes Bild gemalt
 
 
