--- a/locale/ru/brush-tools.cfg
+++ b/locale/ru/brush-tools.cfg
@@ -2,7 +2,7 @@
 brush-tools=Кисти [ALPHA]
 
 [mod-description]
-brush-tools=Добавляет набор кисти и т.д.\nПоскольку это альфа версия, некоторые фичи не завершены
+brush-tools=Добавляет кисти, которые позволяют рисовать фигуры и текст на поверхности.\nКроме того, вы можете сгенерировать код этих фигур в файл.\nАльфа-версия, некоторые фичи не доработаны
 
 [item-name]
 pen=Ручка
@@ -15,7 +15,7 @@ recolor-bt=Перекрашиватель
 [shortcut-name]
 brush-bt-shortcut=Инструмент кисть
 eraser-bt-shortcut=Ластик
-recolor-bt-shortcut=Перекраска
+recolor-bt-shortcut=Перекрашиватель
 
 [controls]
 redo-bt=Вернуть
@@ -25,7 +25,7 @@ give-eraser-bt=Получить ластик
 select-prev-brush-tool=Выбрать предыдущую кисть
 select-next-brush-tool=Выбрать следующую кисть
 -size-bt=Уменьшить размер кисти
-+size-bt=Увеличить размер кисти
++size-bt=Уменьшить размер кисти
 -10size-bt=Уменьшить размер кисти x10
 +10size-bt=Увеличить размер кисти x10
 
@@ -44,3 +44,5 @@ delete_UI=- удаляет интерфейс мода "Кисти"
 
 [brush-tools]
 respons.big-distance=Вы нарисовали слишком большой рисунок
+
+
