--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+	"editor.suggestSelection": "recentlyUsedByPrefix",
+	"editor.suggest.showWords": false,
 	"lua.targetVersion": "5.2",
 	"Lua.runtime.version": "Lua 5.2",
 	"Lua.workspace.preloadFileSize": 1600,
@@ -25,16 +27,11 @@
 		"__DebugAdapter",
 		"__Profiler"
 	],
-	"Lua.diagnostics.disable": [
-		"lowercase-global"
-	],
 	"Lua.workspace.ignoreDir": [
 			".vscode",
 			".github",
-			"locale",
-			"icons"
+			"locale"
 	],
-	"Lua.telemetry.enable": false,
 	"Lua.runtime.builtin": {
 		"basic": "enable",
 		"builtin": "enable",
@@ -59,11 +56,14 @@
 		"commands"
 	],
 	"Lua.intelliSense.searchDepth": 3,
-	"Lua.hint.enable": true,
 	"Lua.diagnostics.workspaceDelay": 50,
 	"git.autofetch": "all",
 	"markdownlint.config": {
 		"MD033": false,
 		"MD034": false,
-	}
+	},
+	"restructuredtext.confPath": "${workspaceFolder}\\predocs",
+	"restructuredtext.builtDocumentationPath" : "${workspaceFolder}/docs/_build/html",
+	"restructuredtext.updateOnTextChanged"    : "false",
+	"restructuredtext.updateDelay"            : 1000,
 }
