--- a/locale/ru/brush-tools.cfg
+++ b/locale/ru/brush-tools.cfg
@@ -10,6 +10,7 @@ circle=Круг
 rectangle=Прямоугольник
 speech-bubble=Текст
 eraser=Ластик
+light=Свет
 recolor-bt=Перекрашиватель
 
 [shortcut-name]
