--- a/locale/es-ES/brush-tools.cfg
+++ b/locale/es-ES/brush-tools.cfg
@@ -10,6 +10,7 @@ circle=Círculo
 rectangle=Rectángulo
 speech-bubble=Texto
 eraser=Borrador
+light=Luz
 recolor-bt=Cambiar de color
 
 [shortcut-name]
@@ -19,6 +20,11 @@ recolor-bt-shortcut=Cambiar de color
 
 [controls]
 redo-bt=Rehacer
+give-paint-bt=Consigue una herramienta de pincel
+give-recolor-bt=
+Obtén una herramienta para cambiar el color=
+give-eraser-bt=
+Obtén una herramienta para borrar el color=
 select-prev-brush-tool=Seleccionar herramienta de dibujo anterior
 select-next-brush-tool=Seleccionar herramienta de dibujo siguiente
 -size-bt=Disminuir el tamaño del pincel
