Update translations from Crowdin

--- a/locale/fr/brush-tools.cfg
+++ b/locale/fr/brush-tools.cfg
@@ -1,6 +1,8 @@
 [mod-name]
+brush-tools=Outils de brosse [ALPHA]
 
 [mod-description]
+brush-tools=Ajoute des outils de brosse, etc\nC'est une version alpha, certaines fonctionnalités ne sont pas complétées
 
 [item-name]
 pen=Stylo
@@ -8,14 +10,24 @@ circle=Cercle
 rectangle=Rectangle
 speech-bubble=Texte
 eraser=Gomme
+recolor-bt=Recolore
 
 [shortcut-name]
+brush-bt-shortcut=Outils de brosse
 eraser-bt-shortcut=Gomme
+recolor-bt-shortcut=Recolore
 
 [controls]
 redo-bt=Rétablir
+give-paint-bt=Obtenir un outil de brosse
+give-recolor-bt=Obtenir un outil de recoloriage
 give-eraser-bt=Obtenir une gomme
+select-prev-brush-tool=Sélectionnez l'outil de brosse précédent
+select-next-brush-tool=Sélectionnez l'outil de brosse suivant
 -size-bt=Diminuer la taille du pinceau
++size-bt=Augmenter la taille du pinceau
+-10size-bt=Diminuer la taille de la brosse x10
++10size-bt=Augmenter la taille de la brosse x10
 
 [mod-setting-name]
 brush-tools_dev-mode=Mode développeur
@@ -23,8 +35,13 @@ brush-tools_dev-mode=Mode développeur
 [mod-setting-description]
 
 [brush-tools-commands]
+remove-paintings=- supprime les peintures sur votre surface
 remove-all-paintings=- supprime toutes les peintures
+count-paintings=- compte des peintures sur votre surface
+count-all-paintings=- compte toutes les peintures
+delete_UI=- supprime l'interface utilisateur du mod "Brush tools"
 
 [brush-tools]
+respons.big-distance=Vous avez dessiné une trop grande peinture
 
 
