--- a/locale/fr/brush-tools.cfg
+++ b/locale/fr/brush-tools.cfg
@@ -10,6 +10,7 @@ circle=Cercle
 rectangle=Rectangle
 speech-bubble=Texte
 eraser=Gomme
+light=Lumière
 recolor-bt=Recolore
 
 [shortcut-name]
@@ -33,6 +34,7 @@ select-next-brush-tool=Sélectionnez l'outil de brosse suivant
 brush-tools_dev-mode=Mode développeur
 
 [mod-setting-description]
+brush-tools_dev-mode=Générer le code des figures dans ...script-output/brush-tools-output.lua
 
 [brush-tools-commands]
 remove-paintings=- supprime les peintures sur votre surface
