--- a/locale/en/brush-tools.cfg
+++ b/locale/en/brush-tools.cfg
@@ -34,7 +34,7 @@ select-next-brush-tool=Select next brush tool
 brush-tools_dev-mode=Dev mode
 
 [mod-setting-description]
-brush-tools_dev-mode=Generetes code of fiqures in ...script-output/brush-tools-output.lua
+brush-tools_dev-mode=Generates code of figures in ...script-output/brush-tools-output.lua
 
 [brush-tools-commands]
 remove-paintings=- removes paintings on your surface
