Update translations from Crowdin

--- a/locale/es-ES/brush-tools.cfg
+++ b/locale/es-ES/brush-tools.cfg
@@ -36,6 +36,7 @@ select-next-brush-tool=Seleccionar herramienta de dibujo siguiente
 brush-tools_dev-mode=Modo desarrollador
 
 [mod-setting-description]
+brush-tools_dev-mode=Genera código de figuras en ...script-output/brush-tools-output.lua
 
 [brush-tools-commands]
 remove-paintings=- elimina los dibujos en la superficie
