--- a/locale/nl/brush-tools.cfg
+++ b/locale/nl/brush-tools.cfg
@@ -33,6 +33,7 @@ select-next-brush-tool=Selecteer volgend kwastgereedschap
 brush-tools_dev-mode=Dev mode
 
 [mod-setting-description]
+brush-tools_dev-mode=Generëert code van figuren in ...script-output/brush-tools-output.lua
 
 [brush-tools-commands]
 remove-paintings=- verwijdert tekeningen van je oppervlak
