--- a/locale/de/brush-tools.cfg
+++ b/locale/de/brush-tools.cfg
@@ -34,6 +34,7 @@ select-next-brush-tool=Nächstes Pinselwerkzeug auswählen
 brush-tools_dev-mode=Entwicklermodus
 
 [mod-setting-description]
+brush-tools_dev-mode=Generiert Zahlencode in ...script-output/brush-tools-output.lua
 
 [brush-tools-commands]
 remove-paintings=- entfernt Bilder auf deiner Oberfläche
