Update translations from Crowdin

--- a/locale/pt-BR/brush-tools.cfg
+++ b/locale/pt-BR/brush-tools.cfg
@@ -2,6 +2,7 @@
 brush-tools=Ferramentas do pincel [ALPHA]
 
 [mod-description]
+brush-tools=Adiciona ferramentas de edição\nÉ a versão alpha, alguns recursos não estão completos
 
 [item-name]
 pen=Caneta
@@ -9,6 +10,7 @@ circle=Círculo
 rectangle=Retângulo
 speech-bubble=Texto
 eraser=Borracha
+light=Iluminação
 recolor-bt=Recolorir
 
 [shortcut-name]
@@ -18,6 +20,13 @@ recolor-bt-shortcut=Recolorir
 
 [controls]
 redo-bt=Refazer
+give-paint-bt=Obtenha uma ferramenta de pincel
+give-recolor-bt=Obtenha uma ferramenta de recolorir
+give-eraser-bt=Obtenha um apagador
+select-prev-brush-tool=Seleciona a ferramenta de edição anterior
+select-next-brush-tool=Seleciona a próxima ferramenta de edição
+-size-bt=Diminuir o tamanho do pincel
++size-bt=Aumentar o tamanho do pincel
 -10size-bt=Diminuir tamanho do pincel x10
 +10size-bt=Aumentar tamanho do pincel x10
 
@@ -25,8 +34,13 @@ redo-bt=Refazer
 brush-tools_dev-mode=Modo de desenvolvimento
 
 [mod-setting-description]
+brush-tools_dev-mode=Gera códigos de figuras em ...script-output/brush-tools-output.lua
 
 [brush-tools-commands]
+remove-paintings=- remove pinturas na sua superfície
+remove-all-paintings=- remove todas as pinturas
+count-paintings=- conta pinturas na sua superfície
+count-all-paintings=- conta todas as pinturas
 delete_UI=- Apaga a interface de usuário do mod "Pincel ferramentas"
 
 [brush-tools]
