Update translations from Crowdin

--- a/locale/uk/brush-tools.cfg
+++ b/locale/uk/brush-tools.cfg
@@ -5,10 +5,12 @@ brush-tools=Інструменти кисті [ALPHA]
 brush-tools=Додає інструменти для пензля і т. д.\nце альфа-версія, деякі функції не завершені
 
 [item-name]
+pen=Олівець
 circle=Коло
 rectangle=Прямокутник
 speech-bubble=Текст
 eraser=Гумка
+light=Світлий
 recolor-bt=Заміна кольору
 
 [shortcut-name]
@@ -17,6 +19,7 @@ eraser-bt-shortcut=Гумка
 recolor-bt-shortcut=Заміна кольору
 
 [controls]
+redo-bt=Застосувати
 give-paint-bt=Взяти кисть
 give-recolor-bt=Взяти інструмент зміни кольору
 give-eraser-bt=Взяти гумку
