--- a/locale/cs/brush-tools.cfg
+++ b/locale/cs/brush-tools.cfg
@@ -25,9 +25,9 @@ give-eraser-bt=Získejte gumu
 select-prev-brush-tool=Vybrat předchozí nástroj štětce
 select-next-brush-tool=Vybrat následující nástroj štětce
 -size-bt=Snižte velikost štětce
-+size-bt=Zvětšete velikost štětce
+plus_size-bt=Zvětšete velikost štětce
 -10size-bt=Snižte velikost štětce x10
-+10size-bt=Zvětšit velikost štětce x10
+plus_10size-bt=Zvětšit velikost štětce x10
 
 [mod-setting-name]
 brush-tools_dev-mode=Režim vývojáře
