--- a/locale/en/brush-tools.cfg
+++ b/locale/en/brush-tools.cfg
@@ -26,9 +26,9 @@ give-eraser-bt=Get an eraser
 select-prev-brush-tool=Select previous brush tool
 select-next-brush-tool=Select next brush tool
 -size-bt=Decrease brush size
-+size-bt=Increase brush size
+plus_size-bt=Increase brush size
 -10size-bt=Decrease brush size x10
-+10size-bt=Increase brush size x10
+plus_10size-bt=Increase brush size x10
 
 [mod-setting-name]
 brush-tools_dev-mode=Dev mode
