--- a/locale/ru/brush-tools.cfg
+++ b/locale/ru/brush-tools.cfg
@@ -26,9 +26,9 @@ give-eraser-bt=Получить ластик
 select-prev-brush-tool=Выбрать предыдущую кисть
 select-next-brush-tool=Выбрать следующую кисть
 -size-bt=Уменьшить размер кисти
-+size-bt=Уменьшить размер кисти
+plus_size-bt=Уменьшить размер кисти
 -10size-bt=Уменьшить размер кисти x10
-+10size-bt=Увеличить размер кисти x10
+plus_10size-bt=Увеличить размер кисти x10
 
 [mod-setting-name]
 brush-tools_dev-mode=Режим разработчика
