--- a/locale/uk/brush-tools.cfg
+++ b/locale/uk/brush-tools.cfg
@@ -26,9 +26,9 @@ give-eraser-bt=Взяти гумку
 select-prev-brush-tool=Обрати попередній інструмент кисті
 select-next-brush-tool=Обрати наступний інструмент кисті
 -size-bt=Зменшити розмір кисті
-+size-bt=Збільшити розмір кисті
+plus_size-bt=Збільшити розмір кисті
 -10size-bt=Зменшити розмір кисті x10
-+10size-bt=Збільшити розмір кисті x10
+plus_10size-bt=Збільшити розмір кисті x10
 
 [mod-setting-name]
 brush-tools_dev-mode=Режим розробника
