--- a/locale/nl/brush-tools.cfg
+++ b/locale/nl/brush-tools.cfg
@@ -26,9 +26,9 @@ give-eraser-bt=Krijg een gum
 select-prev-brush-tool=Selecteer vorige kwastgereedschap
 select-next-brush-tool=Selecteer volgend kwastgereedschap
 -size-bt=Verklein kwast grootte
-+size-bt=Vergroot kwast grootte
+plus_size-bt=Vergroot kwast grootte
 -10size-bt=Verklein kwast grootte x10
-+10size-bt=Vergroot kwast grootte x10
+plus_10size-bt=Vergroot kwast grootte x10
 
 [mod-setting-name]
 brush-tools_dev-mode=Dev mode
