--- a/locale/cs/brush-tools.cfg
+++ b/locale/cs/brush-tools.cfg
@@ -10,6 +10,7 @@ circle=Kruh
 rectangle=Obdélník
 speech-bubble=Text
 eraser=Guma
+light=Světlo
 recolor-bt=Přebarvit
 
 [shortcut-name]
@@ -25,12 +26,15 @@ give-eraser-bt=Získejte gumu
 select-prev-brush-tool=Vybrat předchozí nástroj štětce
 select-next-brush-tool=Vybrat následující nástroj štětce
 -size-bt=Snižte velikost štětce
+plus_size-bt=Zvětšit velikost štětce
 -10size-bt=Snižte velikost štětce x10
+plus_10size-bt=Zvětšit velikost štětce x10
 
 [mod-setting-name]
 brush-tools_dev-mode=Režim vývojáře
 
 [mod-setting-description]
+brush-tools_dev-mode=Vygeneruje kód čísel ve formátu ...script-output/brush-tools-output.lua
 
 [brush-tools-commands]
 remove-paintings=- odstraní malby na vašem povrchu
